# controllers/user.controller.js
@@ -1,0 +1,46 @@
+const db = require("../models");
+const { User } = db;
+const Op = db.Sequelize.Op;
+exports.create = (req, res) => {
+  const user = {
+    username: req.body.username,
+    password: req.body.password,
+    email: req.body.email,
+  };
+
+  User.create(user)
+    .then((data) => {
+      res.send(data);
+    })
+    .catch((err) => {
+      res.status(500).send({
+        message: err.message || "error",
+      });
+    });
+};
+
+exports.findAll = (req, res) => {
+  User.findAll({})
+    .then((data) => {
+      res.send(data);
+    })
+    .catch((err) => {
+      res.status(500).send({
+        message: err.message || "error",
+      });
+    });
+};
+
+exports.login = (req, res) => {
+  User.findOne({
+    where: { username: req.body.username, password: req.body.password },
+  })
+    .then((data) => {
+      res.send(data);
+    })
+    .catch((err) => {
+      res.status(500).send({
+        message: err.message || "error",
+      });
+    });
+};
