# models/user.model.js
@@ -1,0 +1,24 @@
+const { sequelize, Sequelize } = require(".");
+
+module.exports = (sequelize, Sequelize) => {
+  const User = sequelize.define("User", {
+    user_id: {
+      type: Sequelize.INTEGER,
+      primaryKey: true,
+      autoIncrement: true,
+    },
+
+    username: {
+      type: Sequelize.STRING,
+    },
+
+    email: {
+      type: Sequelize.STRING,
+    },
+    password: {
+      type: Sequelize.STRING,
+    },
+  });
+
+  return User;
+};
