# swagger.yml
@@ -4,6 +4,7 @@ info:
   version: "1.0"
 tags:
   - name: product
+  - name: user
 
 paths:
   /api/product/findAll:
@@ -71,6 +72,50 @@ paths:
       parameters:
         - name: product_id
           in: path
+      responses:
+        "200":
+          description: OK
+  /api/user/findAll:
+    get:
+      tags:
+        - user
+      responses:
+        "200":
+          description: OK
+
+  /api/user/create:
+    post:
+      tags:
+        - user
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                password:
+                  type: string
+                email:
+                  type: string
+      responses:
+        "200":
+          description: OK
+  /api/user/login:
+    post:
+      tags:
+        - user
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                password:
+                  type: string
       responses:
         "200":
           description: OK
